# project-notebook

./: .gitignore  CLAUDE.md  DOGFOOD-LOG.md  DOGFOOD.md  LICENSE  PLAN.md  README.md  hub.py  pyproject.toml
.claude/skills/notebook-register/: SKILL.md
docs/: architecture.md  development.md  index.html  ios.md  security.md  tester.md
ios/ProjectNotebook/: project.yml
ios/ProjectNotebook/ProjectNotebook/: HubDiscovery.swift  Info.plist  LocalNetworkAuthorization.swift  PairingManager.swift  ProjectNotebook.entitlements  ProjectNotebookApp.swift
ios/ProjectNotebook/ProjectNotebook.xcodeproj/: project.pbxproj
ios/ProjectNotebook/ProjectNotebook.xcodeproj/xcshareddata/xcschemes/: ProjectNotebook.xcscheme  ShareExtension.xcscheme
ios/ProjectNotebook/ShareExtension/: Info.plist  ShareExtension.entitlements  ShareViewController.swift
ios/ProjectNotebook/Shared/: BackgroundUploadDelegate.swift  TokenStore.swift  UploadLog.swift
src/project_notebook/: cli.py  hub.py  pairing.py  tools.py
src/project_notebook/processors/: __init__.py  extract.py  ffmpeg.py  transcribe.py  whisper.py
src/project_notebook/skill/: SKILL.md
