[project]
name = "project-notebook"
version = "0.1.0"
description = "Local hub + CLI for ingesting artifacts from your phone into the active project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "segno>=1.6.1",
]

[project.scripts]
project-notebook = "project_notebook.cli:main"
notebook = "project_notebook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_notebook"]
