[project]
name = "project-notebook"
version = "0.1.0"
description = "Local hub + CLI for ingesting artifacts from your phone into the active project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "pyyaml>=6.0",
    "segno>=1.6.1",
    "zeroconf>=0.131.0",
]

# Transcription, video extraction etc. are provided by external tools (ffmpeg,
# mlx-whisper, …) the user installs separately and `project-notebook check`
# reports on. They are not Python dependencies of this package.

[project.scripts]
project-notebook = "project_notebook.cli:main"
notebook = "project_notebook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_notebook"]
