[project]
name = "project-notebook"
version = "0.1.0"
description = "Like AirDrop, but it lands in your Claude Code session. Share photos, voice memos, and videos from your phone straight into your active coding project."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Steven Lybeck", email = "slybeck@gmail.com" },
]
keywords = [
    "claude-code",
    "ios",
    "share-extension",
    "artifacts",
    "voice-memo",
    "transcription",
    "airdrop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "aiohttp>=3.13.5",
    "pyyaml>=6.0",
    "segno>=1.6.1",
    "zeroconf>=0.131.0",
]

# Transcription, video extraction etc. are provided by external tools (ffmpeg,
# mlx-whisper, …) the user installs separately and `project-notebook check`
# reports on. They are not Python dependencies of this package.

[project.urls]
Homepage = "https://stevenlybeck.com/project-notebook/"
Source = "https://github.com/stevenlybeck/project-notebook"
Issues = "https://github.com/stevenlybeck/project-notebook/issues"

[project.scripts]
project-notebook = "project_notebook.cli:main"
notebook = "project_notebook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_notebook"]
